2004-11-24 21:13  fredo

	* MANIFEST: added unifont

2004-11-24 21:12  fredo

	* TODO: update

2004-11-24 21:11  fredo

	* lib/PDF/API2/Resource/UniFont.pm: genesis

2004-11-24 21:10  fredo

	* lib/PDF/API2/Resource/: BaseFont.pm, CIDFont.pm, Font.pm: added
	  virtual font handling

2004-11-24 21:10  fredo

	* lib/PDF/API2/Content.pm: added virtual font handling, fixed var
	  shadow bug

2004-11-24 21:09  fredo

	* lib/PDF/API2.pm: added unifont

2004-11-22 22:07  fredo

	* lib/PDF/API2/Resource/: CIDFont.pm, CIDFont/CJKFont.pm,
	  CIDFont/TrueType.pm, CIDFont/TrueType/FontFile.pm: fixed
	  multibyte-encoding support to work consistently acress
	  cjk/ttf/otf

2004-11-22 17:07  fredo

	* MANIFEST: added TODO + uniglyph.txt

2004-11-22 17:07  fredo

	* TODO: genesis

2004-11-22 03:34  fredo

	* lib/PDF/API2/Util.pm: moved unicode+glyphs to better maintainable
	  uniglyph.txt

2004-11-22 03:31  fredo

	* lib/PDF/API2/Basic/PDF/Utils.pm: added hexstring shortcut

2004-11-22 03:31  fredo

	* lib/PDF/API2/Basic/PDF/String.pm: speed fix

2004-11-22 03:25  fredo

	* lib/PDF/API2/Resource/CIDFont/TrueType/FontFile.pm: added
	  advanced attributes

2004-11-22 03:08  fredo

	* lib/PDF/API2/Resource/Font/CoreFont.pm: aaa

2004-11-22 03:05  fredo

	* lib/PDF/API2/Resource/BaseFont.pm: added pdf-1.5 font param specs

2004-11-22 03:04  fredo

	* lib/PDF/API2/Resource/CIDFont/CJKFont.pm: added missing
	  substitutes

2004-11-22 03:02  fredo

	* lib/PDF/API2/Resource/CIDFont/CJKFont/: kozminproregularacro.pm,
	  kozgopromediumacro.pm: deleted obsolete character widths

2004-11-22 02:05  fredo

	* lib/PDF/API2/Resource/CIDFont/CMap/korean.pm: updated to korea1-2
	  spec

2004-11-22 02:04  fredo

	* lib/PDF/API2/Resource/CIDFont/CJKFont/:
	  adobemyungjostdmediumacro.pm, kozminproregularacro.pm: added
	  advanced attributes

2004-11-22 02:03  fredo

	* lib/PDF/API2/Resource/CIDFont/CJKFont.pm: fixed supplement set,
	  added substitute handling

2004-11-21 04:20  fredo
