@@ -21,7 +21,7 @@
 #   This specific module is licensed under the Perl Artistic License.
 #
 #
-#   $Id: Filter.pm,v 1.7 2004/07/24 23:38:08 fredo Exp $
+#   $Id: Filter.pm,v 1.8 2004/11/25 15:30:36 fredo Exp $
 #
 #=======================================================================
 package PDF::API2::Basic::PDF::Filter;
@@ -88,6 +88,7 @@ sub release
 {
     my ($self) = @_;
 
+    return($self) unless(ref $self);
 # delete stuff that we know we can, here
 
     my @tofree = map { delete $self->{$_} } keys %{$self};
