@@ -21,7 +21,7 @@
 #   This specific module is licensed under the Perl Artistic License.
 #
 #
-#   $Id: Objind.pm,v 1.5 2004/06/15 09:13:13 fredo Exp $
+#   $Id: Objind.pm,v 1.6 2004/11/25 15:30:37 fredo Exp $
 #
 #=======================================================================
 package PDF::API2::Basic::PDF::Objind;
@@ -129,7 +129,7 @@ sub release
     my ($self, $force) = @_;
     my (@tofree);
 
-    return unless(ref($self));
+    return($self) unless(ref $self);
 # delete stuff that we know we can, here
 
     if ($force)
